# FFmpegStudy

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sundy/player/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/sundy/study/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sundy/player/: MainActivity.java
app/src/main/java/com/sundy/study/: AudioActivity.java  CameraPushStreamActivity.java  FFmpegInfoActivity.java  FilterActivity.java  MainActivity.java  PushStreamActivity.java  VideoCodecActivity.java  VideoEncodecActivity.java  VideoPlayActivity.java  VideoTranscoderActivity.java
app/src/main/java/com/sundy/study/adapter/: FunctionAdapter.java  OperationAdapter.java
app/src/main/java/com/sundy/study/controller/: CameraController.java  SourceDataCallback.java
app/src/main/java/com/sundy/study/entity/: FunctionEntity.java  VideoOperationEntity.java
app/src/main/java/com/sundy/study/utils/: FileUtil.java  PhoneUtils.java
app/src/main/java/com/sundy/study/view/: MyVideView.java
app/src/main/res/layout/: sy_audio_layout.xml  sy_camera_push_stream_layout.xml  sy_ffmpeg_info_layout.xml  sy_filter_layout.xml  sy_item_layout.xml  sy_push_stream_layout.xml  sy_video_codec_layout.xml  sy_video_encodec_layout.xml  sy_video_item_layout.xml  sy_video_play_layout.xml  sy_video_transcoder_layout.xml
app/src/test/java/com/sundy/player/: ExampleUnitTest.java
app/src/test/java/com/sundy/study/: ExampleUnitTest.java
common/: build.gradle
common/src/main/java/com/sundy/common/base/: BaseActivity.java
ffmpeg/: build.gradle
ffmpeg/src/androidTest/java/com/sundy/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  FFmpegAudio.cpp  FFmpegAudio.h  FFmpegVideo.cpp  FFmpegVideo.h  audio_lame.cpp  camera_push.cpp  ffmpeg-lib.cpp  logutil.h  newcodec.cpp  push_stream.cpp  video_codec.cpp  video_encodec.cpp  video_player.cpp
ffmpeg/src/main/java/com/sundy/ffmpeg/: AudioPlayer.java  FFmpegHandle.java  FFmpegInfo.java  PushCallback.java  PushStream.java  VideoCodec.java  VideoEncodec.java  VideoPlayer.java
ffmpeg/src/test/java/com/sundy/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
readme/: FFmpeg.md  Streamer.md  编译器配置.md
